--- a/bible_memory_game/pubspec.yaml
+++ b/bible_memory_game/pubspec.yaml
@@ -37,12 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  google_fonts: ^2.3.1
   flutter_test:
     sdk: flutter
 
 flutter_native_splash:
   color: "#000000"
-  image: assets/splash_screen/splash_icon.png
+  image: assets/splash_screen/app_logo.png
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
