--- a/bible_memory_game/android/app/src/main/AndroidManifest.xml
+++ b/bible_memory_game/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bible_memory_game">
    <application
-        android:label="bible_memory_game"
+        android:label="Christian Kids Games"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
