--- a/bible_memory_game/pubspec.yaml
+++ b/bible_memory_game/pubspec.yaml
@@ -27,7 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter_native_splash: ^2.0.5
+#  flutter_native_splash: ^2.0.5
   flutter:
     sdk: flutter
 
@@ -38,12 +38,24 @@ dependencies:
 
 dev_dependencies:
   google_fonts: ^2.3.1
+  flutter_launcher_name: ^0.0.1
+#  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
 
 flutter_native_splash:
   color: "#000000"
   image: assets/splash_screen/app_logo.png
+
+flutter_launcher_name:
+  name: "Christian Kids Games"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  adaptive_icon_background: "#202020"
+  adaptive_icon_foreground: "assets/icon/app_icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
